src/test/deca/context/valid/created/objet/return_end.deca
// Description  :
//     return non derniiere instruction
// Resultat
//      ok

class A {
    int x ;
    int m() {
        int z = 1 ;
        return z ;
        z = 2 ;
    }
}