src/test/deca/context/invalid/created/objet/double_def_meth2.deca
// Description:
//    double definition de methode
//Resultat :
//    Ligne 12 : nom de la methode deja utilisée


class A {
     protected int x ;
     void m1(int x) {
         x = x+1 ;
     }
     int m1(int x) {
         return x+1 ;
     }
}